--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,28 @@
-h2{
+*{
+    margin: 0;
+    padding: 0;
+}
+
+h1{
     color: chartreuse;
+    font-style: italic;
+    font-weight: lighter;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-decoration: overline;
+    font-size: 80px;
+    text-align: center;
+}
+#heading-parent{
+    background-color: rgb(54, 52, 51);
+    height: 600px;
+    padding: 100px 0px;
+    width: 1100px;
+    /* margin-top: 40px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto; */
+    margin: 30px auto;
+
+
+
 }
